--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pandas>=2.2.3
-numpy>=1.26.4
-scipy>=1.13.1
-python-multipart==0.0.9
-scikit-learn==1.5.1
-sqlalchemy==2.0.35
-psycopg2-binary==2.9.9
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-pydantic==2.9.2
+pandas==2.0.3 
+fastapi==0.115.0 
+uvicorn[standard]==0.30.6 
