--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi==0.115.0
-uvicorn[standard]==0.30.6
-pandas==2.2.3
-numpy==2.1.3
-scipy==1.14.1
-python-multipart==0.0.9
-scikit-learn==1.5.1
-sqlalchemy==2.0.35
+fastapi==0.111.0
+uvicorn[standard]==0.29.0
+sqlalchemy==2.0.29
 psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-pydantic==2.9.2
+bcrypt==4.1.3
+python-multipart==0.0.9
+pandas==2.2.2
+numpy==1.26.4
+scipy==1.13.0
+scikit-learn==1.4.2
+pydantic[email]==2.7.1
+alembic==1.13.1
